# TrigMuonModules

./: CMakeLists.txt  Makefile  README.md
include/: Common.h  HTConfigWork.hpp  HTConfigWorkGPU.cuh  HTConfigWorkGPU.hpp  HTHelpers.cuh  HoughKernels.cuh  HoughTransform.hpp  muonDataContexts.hpp  muonDeviceWrapperGPU.cuh  muonSimpleWork.hpp  muonSimpleWorkGPU.cuh  muonSimpleWorkGPU.hpp  muonTriggerModuleCPU.hpp  muonTriggerModuleGPU.cuh  muonTriggerModuleGPU.hpp
src/: HTConfigWork.cxx  HTConfigWorkGPU.cu  HTConfigWorkGPU.cxx  HoughKernelsGPU.cu  HoughTransform.cxx  muonDeviceWrapperGPU.cu  muonSimpleWork.cxx  muonSimpleWorkGPU.cu  muonSimpleWorkGPU.cxx  muonTriggerModule.cxx  muonTriggerModuleCPU.cxx  muonTriggerModuleGPU.cu  muonTriggerModuleGPU.cxx  simpleIndexing.cu
